--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.30</version>
         </dependency>
+        <dependency>
+            <groupId>com.alexdupre</groupId>
+            <artifactId>pngj</artifactId>
+            <version>2.1.2.1</version>
+        </dependency>
 
 
     </dependencies>
