--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
             <artifactId>pngj</artifactId>
             <version>2.1.2.1</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.ini4j</groupId>-->
+<!--            <artifactId>ini4j</artifactId>-->
+<!--            <version>0.5.4</version>-->
+<!--        </dependency>-->
+
 
 
     </dependencies>
