--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,11 @@
             <artifactId>pngj</artifactId>
             <version>2.1.2.1</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.ini4j</groupId>-->
-<!--            <artifactId>ini4j</artifactId>-->
-<!--            <version>0.5.4</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.openpnp</groupId>
+            <artifactId>opencv</artifactId>
+            <version>4.3.0-3</version>
+        </dependency>
 
 
 
