--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.spe-uob.3DPrinting</groupId>
-    <artifactId>3DPrinting</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>SliceSupporter</artifactId>
+    <version>Beta</version>
 
     <properties>
         <maven.compiler.source>15</maven.compiler.source>
@@ -59,7 +59,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>fully.qualified.MainClass</mainClass>
+                            <mainClass>Main</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
